--- a/service/templates/rss.html
+++ b/service/templates/rss.html
@@ -23,7 +23,7 @@
     %for item in feed:
 
     <item>
-      <title>${item['title']}</title>
+      <title><![CDATA[${item['title']}]]></title>
 
       <link>${item['link']}</link>
       <!-- comments>http://link#comments</comments -->
