--- a/source/_themes/r2d2/static/ie6.css
+++ b/source/_themes/r2d2/static/ie6.css
@@ -5,3 +5,22 @@ this.src = "_static/transparent.gif"):(this.origBg = this.origBg? this.origBg :t
 this.runtimeStyle.filter = "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='" + this.origBg + "',sizingMethod='crop')",
 this.runtimeStyle.backgroundImage = "none")),this.pngSet=true)
 );}
+
+
+div.documentwrapper {
+    float: none;
+}
+
+div.sphinxsidebar {
+    font-size: 0.75em;
+    line-height: 1.5em;
+    float: right;
+    float: none;
+    margin: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+
+
